--- a/gui/MainWindow.ui
+++ b/gui/MainWindow.ui
@@ -27,6 +27,16 @@
      <string>Load File</string>
     </property>
    </widget>
+   <widget class="QWidget" name="widgetImg" native="true">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>130</y>
+      <width>241</width>
+      <height>211</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
